Fix task-date so it doesn't wrap

--- a/src/style.css
+++ b/src/style.css
@@ -78,7 +78,7 @@ textarea {
     width: max-content;
 }
 .category-tasks-div {
-    width: 400px;
+    width: 425px;
 }
 .completed {
     color: #63364E;
